--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -39,7 +39,7 @@
       align-items: center;
       justify-content: center;
       overflow: hidden;
-      border-bottom: 1px solid @borderColor;
+      border-bottom: @borderStyle;
       padding: 1px;
       &.haveMarginTop{
         margin-top: 43px;
