--- a/src/pages/product/list/index.less
+++ b/src/pages/product/list/index.less
@@ -9,13 +9,99 @@
     background-color: @bodyBg;
   }
   .scrollViewBox{
+    box-shadow: inset 0px 15px 10px -15px @bodyBg;
     flex: 1;
-    // background-color: red;
     .product_list_ctn{
-      background-color: red;
       .product_list_item{
-        height: 200px;
-        border: 1px solid #000;
+        display: flex;
+        align-items: center;
+        height: 255px;
+        overflow: hidden;
+        padding: 32px 0;
+        box-sizing: border-box;
+        border-bottom: @borderStyle;
+        .left_image{
+          width: 254px;
+          height: 192px;
+          margin-right: 24px;
+        }
+        .right_info{
+          height: 100%;
+          flex: 1;
+          overflow: hidden;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          .top_info{
+            .title{
+              font-size: 34px;
+              color: @fontColorDeep;
+              display: -webkit-box;
+              -webkit-line-clamp: 2;
+              -webkit-box-orient: vertical;
+              overflow: hidden;
+              text-overflow: ellipsis;
+            }
+            .company_info{
+              display: flex;
+              align-items: center;
+              height: 44px;
+              overflow: hidden;
+              margin-top: 12px;
+              .company_image{
+                width: 44px;
+                height: 44px;
+                margin-right: 16px;
+              }
+              .company_name{
+                flex: 1;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                color: @fontColorShallow;
+              }
+            }
+          }
+          .bottom_info{
+            display: flex;
+            align-items: center;
+            height: 50px;
+            overflow: hidden;
+            .like{
+              flex: 1;
+              overflow: hidden;
+              display: flex;
+              align-items: center;
+              .like_icon{
+                width: 26px;
+                height: 26px;
+                margin-right: 8px;
+              }
+              .like_num{
+                // line-height: 1em;
+                color: @fontColorShallow;
+                &.isLike{
+                  color: @blue;
+                }
+              }
+            }
+            .price{
+              // display: flex;
+              // align-items: flex-end;
+              margin-left: 24px;
+              height: 50px;
+              color: @orange;
+              font-size: 36px;
+              line-height: 1em;
+            }
+          }
+        }
+      }
+      .popmpt{
+        height: 64px;
+        text-align: center;
+        line-height: 64px;
+        color: @fontColorShallow;
       }
     }
   }
