--- a/src/assets/style/detail.less
+++ b/src/assets/style/detail.less
@@ -1,6 +1,7 @@
 @import './common.less';
 .pageBody.pageDetailCtn{
   padding: 24px 18px 26px;
+  min-height: 100%;
   .detailCtn{
     width: 100%;
     border-radius: 24px;
@@ -63,7 +64,7 @@
   }
   .middleTitleCtn{
     margin:  42px 0 24px;
-    padding: 0 26px;
+    padding: 0 26px 0 0;
     display: flex;
     align-items: center;
     color: @fontColorShallow;
