--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -3,6 +3,7 @@
   background-color: #FFF;
   padding: 26px 32px 46px 32px;
   box-sizing: border-box;
+  height: 100%;
   .out_box{
     width: 690px;
     height: 100%;
