--- a/src/components/searchNavBar/index.less
+++ b/src/components/searchNavBar/index.less
@@ -2,7 +2,7 @@
 .search_nav_bar{
   width: 100%;
   height: 88px;
-  // padding: 0 32px;
+  padding: 12px 32px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
