--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -59,6 +59,7 @@
           border-top-right-radius: 8px;
         }
         .waterfall_flow_item__title{
+          text-align: center;
           margin-top: 31px;
           height: 66px;
           padding: 0 15px;
@@ -77,6 +78,7 @@
           box-sizing: border-box;
           display: flex;
           align-items: center;
+          justify-content: space-between;
           .company_info{
             flex: 1;
             display: flex;
