--- a/src/pages/order/detail/index.less
+++ b/src/pages/order/detail/index.less
@@ -28,7 +28,7 @@
           font-size: @fontSizeSmall;
         }
       }
-      .price_stock_info{
+      .price_store_info{
         width: 100%;
         display: flex;
         align-items: flex-end;
@@ -37,7 +37,7 @@
           font-size: 36px;
           flex: 1;
         }
-        .stock{
+        .store{
           display: flex;
           align-items: flex-end;
           color: @fontColor100;
