--- a/src/pages/order/list/index.less
+++ b/src/pages/order/list/index.less
@@ -12,7 +12,7 @@
       .order_list_item{
         display: flex;
         align-items: center;
-        height: 228px;
+        min-height: 228px;
         margin-bottom: 24px;
         padding: 24px 60px 24px 24px;
         box-sizing: border-box;
