--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -21,8 +21,10 @@
       align-items: center;
       margin-top: 82px;
       .logo{
-        width: 80px;
-        height: 80px;
+        // width: 80px;
+        // height: 80px;
+        width: 523px;
+        height: 300px;
       }
       .name{
         display: flex;
